--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>elizabethd.me</title>
     </head>
-    <body>
-        A webpage.
-    </body>
+    <marquee>
+        <font size="+30"><strong>Edie's CS52 Webpage!</strong></font>
+    </marquee>
 </html>
