changed bg color

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>elizabethd.me</title>
-    </head>
-    <marquee>
-        <font size="+30"><strong>Edie's CS52 Webpage!</strong></font>
-    </marquee>
+    <body style="background-color : #c6ebd9">
+        <head>
+            <title>elizabethd.me</title>
+        </head>
+        <marquee behavior="slide" scrollmount="5">
+            <font size="+30"><strong>Edie's CS52 Webpage!</strong></font>
+        </marquee>
+        <hr>
+    </body>
 </html>
