--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         
         <footer>
             <ul>
-                <li class="sponsor">
-                    Sponsored by <a href="https://aerobicsfirst.com/">Aerobics First<a>
+                <li class="sponsor"> Sponsered by Aerobics First
+                    <a href="https://aerobicsfirst.com/" class="fas fa-running"> </a>
                 </li>
                 <li class="foot"><a href="https://twitter.com/yhztrack" class="fa fa-twitter"></a></li>
                 <li class="foot"><a href="https://www.facebook.com/YHZ-Track-Field-285836198132534/" class="fa fa-facebook"></a></li>
