--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Telex&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/b3da67f842.js" crossorigin="anonymous"> </script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -50,17 +51,17 @@
   <div class="principles">
         <div class="one">
           <div class="train">
-            <h1>TRAIN</h1>
+            <h1 class="subtitle">TRAIN</h1>
             <p class="des"> is the beginner athlete. The athlete in the so called “sampling” years. This age group would be in the 8-12 year old range, where they may only be involved 1 or 2 days a week at certain times of the year. This program recognized Nationally by Athletics Canada is called Run, Jump Throw.</p>
         </div>
 
         <div class="compete">
-            <h1>COMPETE</h1>
+            <h1 class="subtitle">COMPETE</h1>
             <p class="des">are athletes usually in Junior and Senior High School. They may train up to three times a week in a group setting. Some of these athletes have made the decision to commit to track and field exclusively while others may be participating in more than one sport.</p>
         </div>
 
         <div class="excel">
-            <h1>EXCEL</h1>
+            <h1 class="subtitle">EXCEL</h1>
             <p class="des">is the athlete that has committed completely to track and field and trains year round, and has most likely made the decision to only participate in a single sport. Sometimes these athletes can be still in high school, Some of these athletes may compete locally, some nationally, and some internationally. Collegiate athletes during their summer break make their home with YHZ. Post Collegiate athletes also need guidance, so our club offers that to them.</p>
         </div>
         </div>
