--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Edie's Page</title>
+	</head>
 	<body>
 		<h1>Edie's Webpage</h1>
 	</body>
